# Codefor-practice

./: CMakeLists.txt  README.md  main.cpp  run_cmake.sh
build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HELLOAPP.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  defaultconfig.h  hellobinary.vcxproj  hellobinary.vcxproj.filters
build/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  wifi_lib.vcxproj  wifi_lib.vcxproj.filters
include/: calc.hpp
lib/: CMakeLists.txt  Wifi.cpp  Wifi.hpp
src/: calc.cpp
